module-04/02-ingress/frontend-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-cluster-issuer'
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
spec:
  tls:
  - hosts:
    - test.dopevs.engineer
    - movies.dopevs.engineer
    - songs.dopenvs.engineer
    secretName: nginx-ingress-tls
  rules:
  - host: test.dopevs.engineer
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: movies.dopevs.engineer
    http:
      paths:
      - path: /movies
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: songs.dopevs.engineer
    http:
      paths:
      - path: /songs
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
